--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ header a {
     font-weight: 300;
 }
 
+header a:hover {
+    color: #000;
+}
+
 .container {
     height: 100vh;
     width: 100vw;
